unpackaged/main/default/objects/Reference_Material__c/Reference_Material__c.object-meta.xml
<CustomObject>
    <description>Links/files attached to a Test Case definition for tester context. Case-level, not execution-level: authored once by admins, read-only for testers on every run. File-type rows carry their file via ContentDocumentLink.</description>
    <label>Reference Material</label>
    <nameField>
        <displayFormat>RM-{00000}</displayFormat>
        <label>Reference Material Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reference Materials</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>