unpackaged/main/default/objects/Reference_Material__c/fields/Label__c.field-meta.xml
<CustomField>
    <fullName>Label__c</fullName>
    <description>Display label for links.</description>
    <label>Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>