unpackaged/main/default/objects/Reference_Material__c/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <description>Target URL for link-type materials.</description>
    <label>URL</label>
    <type>Url</type>
</CustomField>