unpackaged/main/default/objects/Reference_Material__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Label__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>